<resources>
    <string name="app_name">UNCmorfi</string>

    <!-- Navigation -->
    <string name="navigation_open">Open navigation drawer</string>
    <string name="navigation_close">Close navigation drawer</string>
    <string name="navigation_menu">Menu</string>
    <string name="navigation_balance">Balance</string>
    <string name="navigation_counter">Counter</string>
    <string name="navigation_renovation">Renovation</string>
    <string name="navigation_map">Map</string>
    <string name="navigation_help">Help</string>
    <string name="navigation_contact">Contact</string>
    <string name="navigation_about">About</string>

    <!-- Menu -->
    <string name="menu_action_update">Update menu</string>

    <!-- Balance -->
    <string name="balance_action_update">Update all cards</string>

    <string name="balance_expiration">Expiration date: %1$s</string>
    <string name="balance_last_update">Last update %1$s</string>

    <string name="balance_new_user_button_info">Done</string>
    <string name="balance_new_user_hint">Add card manually</string>
    <string name="balance_new_user_adding">Adding card %1$s&#8230;</string>

    <string name="balance_user_options_title">Card</string>
    <string name="balance_user_options_update">Update</string>
    <string name="balance_user_options_delete">Delete</string>
    <string name="balance_user_options_copy">Copy</string>
    <string name="balance_user_options_barcode">Barcode</string>
    <string name="balance_user_options_set_name">Change name</string>

    <string name="balance_delete_user_title">Delete %1$s\'s card?</string>
    <string name="balance_delete_user_positive">Delete</string>
    <string name="balance_delete_user_msg">Card deleted</string>

    <string name="balance_copy_msg">Number card copied</string>

    <string name="balance_set_name_title">New name</string>
    <string name="balance_set_name_save">Save</string>

    <!-- Counter -->
    <string name="counter_rations">Rations</string>
    <string name="counter_rations_title">%1$d rations of %2$d</string>
    <string name="counter_percent_symbol">%</string>
    <string name="counter_estimate">Approximately %1$d minutes left (%2$s)</string>
    <string name="counter_distance">Window %1$d (Read Help!)</string>

    <!-- Renovation -->
    <string name="renovation_email_text">
        \t¡Do not forget to attach the regular student certificate if you are a student!\n\n

        \tOr Daspu card, salary receipt or certificate proving relationship with the UNC if you
        are a Teacher or Non-Teacher.</string>

    <!-- About -->
    <string name="about_unofficial_app">This is an unofficial app</string>
    <string name="about_source_code">Source code:</string>

    <!-- SnackBar -->
    <string name="no_connection">No connection</string>
    <string name="connection_error">Connection error</string>
    <string name="updating">Updating&#8230;</string>
    <string name="update_success">Updated</string>
    <string name="update_fail">Update failed</string>
    <string name="new_user_success">Added</string>
    <string name="new_user_fail">An error occurred</string>

    <!-- Toast -->
    <string name="detector_not_available">Barcode dependencies are not yet available.</string>
    <string name="permission_not_granted">Permission not granted</string>
    <string name="low_storage_error">Low storage available</string>
    <string name="align_barcode">Align barcode</string>

    <!-- Help -->
    <string-array name="help_string_array" formatted="false">
        <item>Who we are?</item>
        <item>
            \tWe are two very hungry FaMAF students.\n\n
            \tThe app started just as a hobby,
            so we strive to polish it as much as we can in our free time.\n\n

            Development:\n
                \t\tAlejandro Ismael Silva\n
                \t\talex.sai95@gmail.com\n\n

            Icon and banner:\n
                \t\tJulieta Wiesztort\n
                \t\tjuli.nana.07@gmail.com\n\n

            Correction Spanish translation:\n
                \t\tRosa Maria Peralta\n
                \t\tmariarosaperalta95@gmail.com\n\n

            Correction English translation:\n
                \t\tGeorge Alegre\n
                \t\tgithub.com/georgealegre\n\n

            Contributors:\n
                \t\tAndés Saravia\n
                \t\tgithub.com/MinamiUruka
        </item>

        <item>Why is the menu not updated?</item>
        <item>
            \tWe get the menu from the university\'s website:\n\n
            www.unc.edu.ar/vida-estudiantil/men%C3%BA-de-la-semana\n\n
            \tIf the menu doesn\'t refresh, it must be because the university did not update it.
        </item>

        <item>Where do they get Balance and Meter information?</item>
        <item>
            \tFrom the university dining room\'s website:\n\n
            \tBalance: comedor.unc.edu.ar/autoconsulta.php\n\n
            \tMeter: comedor.unc.edu.ar/cocina.php
        </item>

        <item>¿Windows? ¿How estimates work?</item>
        <item>
            \tThere are \"windows\" (or rather columns) along the dining room,
            you have to put the length of the row in front of you, measured in number of windows,
            on the slide bar. For example, at the height of the men\'s baths are 5 windows (women 6),
            the total length of the dining room are 12 windows, the curve is 1 window,
            and in the second entrance are 25 windows. This is very experimental functionality.
            It works with a simple quadratic function calculated from a statistic.
            Although the fewer people you have ahead the more accurate it is,
            the changing nature of the dining room line is difficult to give an accurate estimate.
            We choose \"windows\" as a measure because they will never change over time,
            but curves and countercurves in a row always vary from day to day.
        </item>

        <item>How do I apply for the credential? How can I regenerate the credential?</item>
        <item>
            \tRead the website of the dining room:\n
            https://www.unc.edu.ar/vida-estudiantil/c%C3%B3mo-solicitar-la-credencial
        </item>

        <item>What does \"Barcode dependencies are not yet available.\" mean?</item>
        <item>
            \tTo add a card using the camera, we use Google Play Services\'s \"Vision\" library.
            If this library is not available on the device, it will be downloaded automatically in
            the background (keep in mind that you need storage space available for the download, if you
            don\'t have enough room, a warning will appear).\n\n
            \tTry again after a few minutes. If you are in a hurry or don\'t have Google Play Services,
            you can add it manually by entering the code with the keyboard.
        </item>

        <item>Why are Internet and camera permissions needed?</item>
        <item>
            \tInternet access is necessary for updating the menu, the balance and the
            measurer.\n
            \tCamera access is for adding the card by scanning the barcode on it.
        </item>

        <item>Do I need Internet to check my card balance?</item>
        <item>
            \tAll the data is stored on the device to check offline, but you need to be connected to
            the Internet to get it updated.
        </item>

        <item>Do I can eat twice in one day?</item>
        <item>
            No.
        </item>

        <item>¿What is the bell that rings every so often in the dining room?</item>
        <item>
            Legend has it that when the bell rings there is rotation among the cooks.
        </item>

        <item>How can I collaborate?</item>
        <item>
            \tYou can send your suggestion by e-mail in the \"Contact\" option in the side menu.\n\n

            \tYou can also have a look at the source code in Github:\n
                \t\tgithub.com/AIDEA775/UNCmorfi\n\n

            \tAnd you can recommend the app to anyone you see in the dining room line ;)
        </item>

        <item>What versions were there before?</item>
        <item>
            [v3.0 Cazuela]\n
            * New icon!\n
            * New lateral menu.\n
            * Now the menu is automatically updated every week.\n
            * New interface in Balance.\n
            * Check the expiration date of your card.\n
            * Added the date from the last time you checked the balance.\n
            * Added graph ration meter\n
            * (Experimental) Waiting estimates in the line.\n
            * More topics in Help.\n
            * Added the section Renovation.\n
            * Many other minor changes.\n\n

            [v2.0 Bolognesa]\n
            * Added the sections Help and Contact.\n
            * Improved the Balance UI.\n
            * Colored notifications.\n
            * Update all cards at once.\n
            * Allow application to be installed on external storage.\n
            * Reduced application size.\n
            * Other minor fixes and improvements.\n\n

            [v1.0 Arroz]\n
            * Fixed the first start of the camera on android 6.0 or higher.\n
            * Removed the "Press back again to exit".\n
            * Fixed balance update.\n
            * Other small fixes.\n\n

            [v0.1 Apio]\n
            * First beta version.
        </item>

    </string-array>

</resources>
